Descripcion del cambio

--- a/index copy 3.html
+++ b/index copy 3.html
@@ -357,7 +357,7 @@
     </div>
   </section>
 
-
+  
 
 
   <section id="galeria" class="bg-white py-16 px-6">
@@ -437,7 +437,7 @@
   <!-- TIMELINE + INVESTIGACIONES -->
   <section class="bg-[#f9f9f9] py-16 px-4" id="curriculum">
     <div class="max-w-4xl mx-auto">
-      <h2 class="text-3xl font-bold text-center mb-12 text-[#3f4143]">Antecedentes Académicos y Formativos</h2>
+      <h2 class="text-3xl font-bold text-center mb-12 text-[#3f4143]">Currículum</h2>
 
       <!-- Línea vertical -->
       <div class="relative border-l-4 border-[#AB4F6B] pl-6 space-y-12">
@@ -451,7 +451,7 @@
             </div>
             <div class="ml-4">
               <h4 class="text-xl font-semibold text-[#3f4143]">Psicología</h4>
-              <p class="text-gray-600">2010 - 2015 Agregar años o quitar este campo</p>
+              <p class="text-gray-600">2010 - 2015</p>
               <p class="text-gray-500">Universidad de las Américas.</p>
             </div>
           </div>
@@ -460,9 +460,8 @@
             <div class="absolute left-[-36px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
             </div>
             <div class="ml-4">
-              <h4 class="text-xl font-semibold text-[#3f4143]">Diplomado en Evaluación e intervención para el abordaje
-                integral de las necesidades educativas especiales en la edad escolar</h4>
-              <p class="text-gray-600">2016 - 2018 Agregar años o quitar este campo</p>
+              <h4 class="text-xl font-semibold text-[#3f4143]">Diplomado en Evaluación e intervención para el abordaje integral de las necesidades educativas especiales en la edad escolar</h4>
+              <p class="text-gray-600">2016 - 2018</p>
               <p class="text-gray-500">Pontifica Universidad Catolica de Chile.</p>
             </div>
           </div>
@@ -471,19 +470,18 @@
             <div class="absolute left-[-36px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
             </div>
             <div class="ml-4">
-              <h4 class="text-xl font-semibold text-[#3f4143]">Diplomado Convivencia libre de violencia en familia,
-                trabajo y escuela.</h4>
-              <p class="text-gray-600">2016 - 2018 Agregar años o quitar este campo</p>
+              <h4 class="text-xl font-semibold text-[#3f4143]">Diplomado Convivencia libre de violencia en familia, trabajo y escuela.</h4>
+              <p class="text-gray-600">2016 - 2018</p>
               <p class="text-gray-500">Servicio Nacional de Patrimonio Cultural / Biblioredes.</p>
             </div>
           </div>
-
+          
           <div class="relative">
             <div class="absolute left-[-36px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
             </div>
             <div class="ml-4">
               <h4 class="text-xl font-semibold text-[#3f4143]">Diploma en Inclusión y Diversidad </h4>
-              <p class="text-gray-600">2016 - 2018 Agregar años o quitar este campo</p>
+              <p class="text-gray-600">2016 - 2018</p>
               <p class="text-gray-500">Profuturo.</p>
             </div>
           </div>
@@ -497,69 +495,113 @@
             <div class="absolute left-[-36px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
             </div>
             <div class="ml-4">
-              <h4 class="text-xl font-semibold text-[#3f4143]">WISC-V: Escala Wechsler de Inteligencia para Niños</h4>
-              <p class="text-gray-600">2016 - 2018 Agregar años o quitar este campo</p>
-              <p class="text-gray-500">Formación en aplicación, corrección e interpretación de la prueba WISC-V para
-                evaluar el coeficiente intelectual en niños y niñas..</p>
+              <h4 class="text-xl font-semibold text-[#3f4143]">WISC-V Escala Wechsler de Inteligencia para niños</h4>
+              <p class="text-gray-600">2019</p>
+              <p class="text-gray-500">Atención a pacientes adultos en modalidad presencial y online.</p>
             </div>
           </div>
           <div class="relative">
             <div class="absolute left-[-36px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
             </div>
             <div class="ml-4">
-              <h4 class="text-xl font-semibold text-[#3f4143]">Primeros Auxilios Psicológicos y Apoyo Psicosocial ante
-                Catástrofes</h4>
-              <p class="text-gray-600">2016 - 2018 Agregar años o quitar este campo</p>
-              <p class="text-gray-500">Entrenamiento para brindar contención emocional y asistencia básica en contextos
-                de emergencia y crisis.</p>
+              <h4 class="text-xl font-semibold text-[#3f4143]">WISC-V Escala Wechsler de Inteligencia para niños</h4>
+              <p class="text-gray-600">2019</p>
+              <p class="text-gray-500">Atención a pacientes adultos en modalidad presencial y online.</p>
             </div>
           </div>
           <div class="relative">
             <div class="absolute left-[-36px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
             </div>
             <div class="ml-4">
-              <h4 class="text-xl font-semibold text-[#3f4143]">Complejidades y Desafíos Actuales en Infancia, Niñez y
-                Adolescencia</h4>
-              <p class="text-gray-600">2016 - 2018 Agregar años o quitar este campo</p>
-              <p class="text-gray-500">Análisis de problemáticas contemporáneas que afectan el desarrollo psicosocial y
-                emocional de niños, niñas y adolescentes.</p>
+              <h4 class="text-xl font-semibold text-[#3f4143]">Primeros auxilios psicológicos y apoyo psicosocial ante catastrofes.</h4>
+              <p class="text-gray-600">2019</p>
+              <p class="text-gray-500">Atención a pacientes adultos en modalidad presencial y online.</p>
             </div>
           </div>
           <div class="relative">
             <div class="absolute left-[-36px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
             </div>
             <div class="ml-4">
-              <h4 class="text-xl font-semibold text-[#3f4143]">Evaluación e Intervención en Psicopatología Infantil</h4>
-              <p class="text-gray-600">2016 - 2018 Agregar años o quitar este campo</p>
-              <p class="text-gray-500">Herramientas clínicas para la identificación y abordaje de trastornos
-                psicológicos en población infantil.</p>
+              <h4 class="text-xl font-semibold text-[#3f4143]">Complejidades y desafios hoy en infancia, niñez y adolecencia.</h4>
+              <p class="text-gray-600">2019</p>
+              <p class="text-gray-500">Atención a pacientes adultos en modalidad presencial y online.</p>
             </div>
           </div>
           <div class="relative">
             <div class="absolute left-[-36px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
             </div>
             <div class="ml-4">
-              <h4 class="text-xl font-semibold text-[#3f4143]">Intervenciones Experienciales en Terapia de Aceptación y
-                Compromiso (ACT)</h4>
-              <p class="text-gray-600">2016 - 2018 Agregar años o quitar este campo</p>
-              <p class="text-gray-500"> Aplicación práctica de estrategias centradas en valores, aceptación y
-                mindfulness en el trabajo terapéutico.</p>
+              <h4 class="text-xl font-semibold text-[#3f4143]">Evaluación en intervención en psicopatologia infantil.</h4>
+              <p class="text-gray-600">2019</p>
+              <p class="text-gray-500">Atención a pacientes adultos en modalidad presencial y online.</p>
             </div>
           </div>
           <div class="relative">
             <div class="absolute left-[-36px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
             </div>
             <div class="ml-4">
-              <h4 class="text-xl font-semibold text-[#3f4143]">Introducción a la Lengua de Señas</h4>
-              <p class="text-gray-600">2016 - 2018 Agregar años o quitar este campo</p>
-              <p class="text-gray-500"> Curso básico para el aprendizaje de lengua de señas, facilitando la comunicación
-                inclusiva con personas sordas.</p>
+              <h4 class="text-xl font-semibold text-[#3f4143]">Intervenciones experienciales en Terapia de Aceptación y compromiso.</h4>
+              <p class="text-gray-600">2019</p>
+              <p class="text-gray-500">Atención a pacientes adultos en modalidad presencial y online.</p>
+            </div>
+          </div>
+          <div class="relative">
+            <div class="absolute left-[-36px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
+            </div>
+            <div class="ml-4">
+              <h4 class="text-xl font-semibold text-[#3f4143]">Introducción a la lengua de Señas.</h4>
+              <p class="text-gray-600">2019</p>
+              <p class="text-gray-500">Atención a pacientes adultos en modalidad presencial y online.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+  <section id="historia-profesional" class="py-16 px-4 bg-[#f9f9f9]">
+    <div class="max-w-4xl mx-auto">
+      <h2 class="text-3xl font-semibold text-center text-[#3f4143] mb-10">Mi Historia Profesional</h2>
+
+      <div class="relative border-l-4 border-[#AB4F6B] pl-6 space-y-12">
+        <!-- Evento 1 -->
+        <div class="relative ml-4">
+          <div class="absolute left-[-52px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
+          </div>
+          <h3 class="text-xl font-semibold text-[#3f4143]">2024 – Consulta Privada</h3>
+          <p class="text-[#3f4143] text-base mt-1">
+            Psicoterapia individual para adolescentes y adultos. Enfoque integrativo con énfasis en autocuidado y salud
+            mental.
+          </p>
+        </div>
+
+        <!-- Evento 2 -->
+        <div class="relative ml-4">
+          <div class="absolute left-[-52px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
+          </div>
+          <h3 class="text-xl font-semibold text-[#3f4143]">2018 – 2023: Centro de Salud Mental ABC</h3>
+          <p class="text-[#3f4143] text-base mt-1">
+            Atención clínica y trabajo comunitario en salud mental. Desarrollo de talleres grupales y acompañamiento
+            terapéutico.
+          </p>
+        </div>
+
+        <!-- Evento 3 -->
+        <div class="relative ml-4">
+          <div class="absolute left-[-52px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
+          </div>
+          <h3 class="text-xl font-semibold text-[#3f4143]">2013 – Titulación Psicología</h3>
+          <p class="text-[#3f4143] text-base mt-1">
+            Universidad XYZ. Licenciada en Psicología, con distinción máxima. Memoria sobre trauma psicológico en
+            infancia.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
 
   <!-- INVESTIGACIONES -->
   <section class="bg-white py-16 px-4" id="investigaciones">
@@ -567,62 +609,31 @@
       <h2 class="text-3xl font-semibold text-[#3f4143] mb-6">Investigaciones y Publicaciones</h2>
       <p class="text-lg text-[#3f4143] leading-relaxed mb-10">
         A lo largo de mi trayectoria he participado en investigaciones centradas en el bienestar emocional, el impacto
-        del trauma en la infancia y los enfoques terapéuticos breves. A continuación, presento algunas de mis
-        publicaciones y proyectos más destacados:
+        del trauma en la infancia y los enfoques terapéuticos breves. Aquí algunas de mis publicaciones y proyectos
+        destacados:
       </p>
       <div class="grid md:grid-cols-2 gap-8">
         <!-- Tarjeta de investigación -->
         <div class="bg-[#f4f4f4] p-6 rounded-lg shadow-sm transition transform hover:-translate-y-1 duration-300">
           <h3 class="text-xl font-bold text-[#AB4F6B]">Impacto de la pandemia en la salud mental femenina</h3>
           <p class="text-sm text-gray-600 mb-1">2020</p>
-          <p class="text-gray-500">Estudio exploratorio sobre el incremento de síntomas ansiosos y depresivos en mujeres
-            durante el confinamiento por COVID-19.</p>
+          <p class="text-gray-500">Estudio exploratorio sobre el aumento de cuadros ansiosos y depresivos en mujeres
+            durante el confinamiento.</p>
         </div>
 
-        <!-- Tarjeta de investigación -->
+        <!-- Otra tarjeta -->
         <div class="bg-[#f4f4f4] p-6 rounded-lg shadow-sm transition transform hover:-translate-y-1 duration-300">
           <h3 class="text-xl font-bold text-[#AB4F6B]">Violencia simbólica y salud mental</h3>
           <p class="text-sm text-gray-600 mb-1">2018</p>
-          <p class="text-gray-500">Análisis del impacto del discurso mediático en la construcción de la autoestima en
-            adolescentes mujeres.</p>
+          <p class="text-gray-500">Análisis de cómo el discurso mediático influye en la autoestima femenina en
+            adolescentes.</p>
         </div>
 
-        <!-- Tarjeta con enlaces reales -->
-        <div class="bg-[#f4f4f4] p-6 rounded-lg shadow-sm transition transform hover:-translate-y-1 duration-300">
-          <h3 class="text-xl font-bold text-[#AB4F6B]">
-            Experiencias parentales desde la perspectiva del burnout parental en contexto de pandemia por COVID-19
-          </h3>
-          <p class="text-sm text-gray-600 mb-1">2021</p>
-          <p class="text-gray-500 mb-3">
-            Investigación sobre las experiencias de madres y padres durante el confinamiento, abordando el agotamiento
-            emocional vinculado a la crianza.
-          </p>
-          <ul class="space-y-1">
-            <li>
-              <a href="https://dialnet.unirioja.es/servlet/articulo?codigo=9670962" target="_blank"
-                class="text-[#AB4F6B] text-sm font-semibold hover:underline">
-                Ver publicación en Dialnet
-              </a>
-            </li>
-            <li>
-              <a href="https://www.redalyc.org/journal/6882/688278763001/" target="_blank"
-                class="text-[#AB4F6B] text-sm font-semibold hover:underline">
-                Ver publicación en Redalyc
-              </a>
-            </li>
-            <li>
-              <a href="https://revistacientifica.uamericana.edu.py/index.php/academo/article/view/925" target="_blank"
-                class="text-[#AB4F6B] text-sm font-semibold hover:underline">
-                Ver publicación en Revista Científica UAmericana
-              </a>
-            </li>
-          </ul>
-        </div>
-
-
+        <!-- Puedes agregar más tarjetas igual -->
       </div>
     </div>
   </section>
+
 
   <footer class="bg-[#f4f4f4] text-[#494a49] py-10 px-6">
     <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 items-start text-center md:text-left">
