--- a/index copy 4.html
+++ b/index copy 4.html
@@ -7,11 +7,6 @@
 
   <title>PsicoKenny.Educa</title>
 
-  <!-- Font Awesome CDN -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Lora:wght@400;700&display=swap"
     rel="stylesheet">
@@ -89,28 +84,6 @@
     .hide-scrollbar::-webkit-scrollbar {
       display: none;
       /* Chrome, Safari */
-    }
-
-    .whatsapp-float {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      width: 60px;
-      height: 60px;
-      background-color: #25D366;
-      color: white;
-      font-size: 26px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-      z-index: 999;
-      transition: background-color 0.3s ease;
-    }
-
-    .whatsapp-float:hover {
-      background-color: #1ebc57;
     }
   </style>
 </head>
@@ -204,86 +177,51 @@
         </p>
       </div>
       <!-- Imagen a la derecha -->
-      <!-- Imagen a la derecha -->
       <div class="lg:w-1/2 flex justify-center">
-        <img src="images/image-section/sobre-mi.jpg" alt="Kenny Conejeros"
-          class="w-full max-w-sm object-cover rounded-xl shadow-md">
+        <img src="images/image-section/sobre-mi.jpg" alt="Imagen sobre mí"
+          class="w-48 h-48 object-cover rounded-full border-4 border-[#FDCEDF]">
+      </div>
+    </div>
+
+    <!-- Bloque con 3 columnas -->
+    <div class="max-w-6xl mx-auto mt-12 grid grid-cols-1 md:grid-cols-3 gap-6 px-4">
+      <!-- Tarjeta 1 -->
+      <div class="bg-white rounded-lg shadow-md p-6 text-center">
+        <div class="mx-auto w-14 h-14 flex items-center justify-center rounded-full bg-[#FDCEDF] mb-4">
+          <svg class="w-6 h-6 text-[#AB4F6B]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 14l9-5-9-5-9 5 9 5z" />
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M12 14l6.16-3.422A12.083 12.083 0 0118 20H6a12.083 12.083 0 01-.16-9.422L12 14z" />
+          </svg>
+        </div>
+        <h3 class="text-xl font-semibold text-[#494a49] mb-2">Integradora</h3>
+        <a href="#" class="text-[#AB4F6B] font-medium hover:underline">Más información</a>
       </div>
 
+      <!-- Tarjeta 2 -->
+      <div class="bg-white rounded-lg shadow-md p-6 text-center">
+        <div class="mx-auto w-14 h-14 flex items-center justify-center rounded-full bg-[#FDCEDF] mb-4">
+          <svg class="w-6 h-6 text-[#AB4F6B]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M8 10h.01M12 10h.01M16 10h.01M21 12c0 4.418-4.03 8-9 8s-9-3.582-9-8 4.03-8 9-8 9 3.582 9 8z" />
+          </svg>
+        </div>
+        <h3 class="text-xl font-semibold text-[#494a49] mb-2">Sesiones</h3>
+        <a href="#" class="text-[#AB4F6B] font-medium hover:underline">Más información</a>
+      </div>
+
+      <!-- Tarjeta 3 -->
+      <div class="bg-white rounded-lg shadow-md p-6 text-center">
+        <div class="mx-auto w-14 h-14 flex items-center justify-center rounded-full bg-[#FDCEDF] mb-4">
+          <svg class="w-6 h-6 text-[#AB4F6B]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M9.75 9.75L14.25 14.25M14.25 9.75L9.75 14.25M12 3a9 9 0 110 18 9 9 0 010-18z" />
+          </svg>
+        </div>
+        <h3 class="text-xl font-semibold text-[#494a49] mb-2">Terapia online</h3>
+        <a href="#" class="text-[#AB4F6B] font-medium hover:underline">Más información</a>
+      </div>
     </div>
-
-   <!-- Bloque con 4 columnas mejorado con nuevos íconos -->
-<div class="max-w-6xl mx-auto mt-20 grid grid-cols-1 md:grid-cols-4 gap-8 px-6">
-  <!-- Tarjeta 1: Integradora -->
-  <div class="bg-white rounded-2xl shadow-sm p-8 text-center hover:shadow-md transition-shadow">
-    <div class="mx-auto w-16 h-16 flex items-center justify-center mb-6">
-      <!-- Corazón -->
-      <svg class="w-12 h-12 text-[#D36B8B]" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-        <path stroke-linecap="round" stroke-linejoin="round"
-          d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
-      </svg>
-    </div>
-    <h3 class="text-2xl font-semibold text-gray-800 mb-1">Integradora</h3>
-    <p class="text-sm text-gray-500 mb-4">(Terapia para bienestar integral)</p>
-    <a href="#" class="text-[#D36B8B] font-medium hover:underline">Más información</a>
-  </div>
-
-  <!-- Tarjeta 2: Sesiones -->
-  <div class="bg-white rounded-2xl shadow-sm p-8 text-center hover:shadow-md transition-shadow">
-    <div class="mx-auto w-16 h-16 flex items-center justify-center mb-6">
-      <!-- Calendario -->
-      <svg class="w-12 h-12 text-[#D36B8B]" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-        <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
-        <line x1="16" y1="2" x2="16" y2="6" />
-        <line x1="8" y1="2" x2="8" y2="6" />
-        <line x1="3" y1="10" x2="21" y2="10" />
-      </svg>
-    </div>
-    <h3 class="text-2xl font-semibold text-gray-800 mb-1">Sesiones</h3>
-    <p class="text-sm text-gray-500 mb-4">(Agendamiento y seguimiento personalizado)</p>
-    <a href="#" class="text-[#D36B8B] font-medium hover:underline">Más información</a>
-  </div>
-
-  <!-- Tarjeta 3: Terapia online -->
-  <div class="bg-white rounded-2xl shadow-sm p-8 text-center hover:shadow-md transition-shadow">
-    <div class="mx-auto w-16 h-16 flex items-center justify-center mb-6">
-      <svg class="w-12 h-12 text-[#D36B8B]" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-        <!-- Pantalla -->
-        <rect x="2" y="5" width="20" height="14" rx="2" ry="2" />
-        <!-- Cabeza -->
-        <circle cx="12" cy="10" r="3" />
-        <!-- Cuerpo (tronco simple) -->
-        <path stroke-linecap="round" stroke-linejoin="round" d="M9 17c0-1.5 6-1.5 6 0v2H9v-2z" />
-      </svg>
-    </div>
-    <h3 class="text-2xl font-semibold text-gray-800 mb-1">Terapia online</h3>
-    <p class="text-sm text-gray-500 mb-4">(Atención remota desde cualquier lugar para adolecentes)</p>
-    <a href="#" class="text-[#D36B8B] font-medium hover:underline">Más información</a>
-  </div>
-
- <!-- Tarjeta 4: Terapia presencial (icono globo de conversación) -->
-<div class="bg-white rounded-2xl shadow-sm p-8 text-center hover:shadow-md transition-shadow">
-  <div class="mx-auto w-16 h-16 flex items-center justify-center mb-6">
-    <!-- Globo de conversación -->
-    <svg class="w-12 h-12 text-[#D36B8B]" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-      <path stroke-linecap="round" stroke-linejoin="round"
-        d="M7 8h10M7 12h6m-6 8l-4-4H3a2 2 0 01-2-2V6a2 2 0 012-2h18a2 2 0 012 2v8a2 2 0 01-2 2H9l-2 2z" />
-    </svg>
-  </div>
-  <h3 class="text-2xl font-semibold text-gray-800 mb-1">Terapia presencial</h3>
-  <p class="text-sm text-gray-500 mb-3">(para niñas, niños y adolescentes)</p>
-  <a href="#" class="text-[#D36B8B] font-medium hover:underline">Más información</a>
-</div>
-
-
-
-</div>
-
-
-
-
-
-
 
   </section>
 
@@ -294,9 +232,6 @@
       <div class="space-y-6">
         <h2 class="text-3xl md:text-4xl font-semibold text-gray-800">
           Terapia presencial para niñas, niños y adolescentes
-        </h2>
-        <h2 class="text-3xl md:text-4xl font-semibold text-gray-800">
-          Terapia online para adolescentes
         </h2>
         <p class="text-lg text-gray-600">
           Si tienes dudas o no sabes exactamente qué te sucede, puedes comunicarte con nosotros para agendar tu sesión.
@@ -689,10 +624,10 @@
     </div>
   </section>
 
-  <footer class="bg-[#f4f4f4] text-[#494a49] py-12 px-6">
-    <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-10 text-center md:text-left items-start">
+  <footer class="bg-[#f4f4f4] text-[#494a49] py-10 px-6">
+    <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 items-start text-center md:text-left">
 
-      <!-- Enlaces -->
+      <!-- Izquierda: Enlaces -->
       <div>
         <h3 class="font-semibold text-lg mb-4">Enlaces</h3>
         <ul class="space-y-2">
@@ -703,33 +638,28 @@
         </ul>
       </div>
 
-      <!-- Logo y Redes Sociales -->
-      <div class="flex flex-col items-center md:items-center">
-        <img src="images/Logo.PNG" alt="Logo Psicología" class="w-28 md:w-36 mb-4 rounded-full shadow-sm">
+      <!-- Centro: Logo y redes -->
+      <div class="flex flex-col items-center">
+        <img src="images/Logo.PNG" alt="Logo Psicología" class="mb-4 rounded-full w-24 sm:w-28 md:w-36 lg:w-36">
         <div class="flex space-x-4">
-          <a href="#" target="_blank" class="text-[#AB4F6B] hover:text-[#82384f] text-3xl">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="https://www.instagram.com/psicokenny.educa/" target="_blank" class="text-[#AB4F6B] hover:text-[#82384f] text-3xl">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a href="#" target="_blank" class="text-[#AB4F6B] hover:text-[#82384f] text-3xl">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
+          <a href="#" class="text-[#AB4F6B] hover:text-[#82384f]"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="text-[#AB4F6B] hover:text-[#82384f]"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="text-[#AB4F6B] hover:text-[#82384f]"><i class="fab fa-linkedin-in"></i></a>
         </div>
+      </div>
+
+      <!-- Derecha: WhatsApp -->
+      <div class="flex justify-center md:justify-end items-start">
+        <a href="https://wa.me/56972524249" target="_blank"
+          class="inline-block bg-[#25D366] hover:bg-[#1ebc57] text-white px-5 py-2 rounded-full shadow-md text-sm">
+          <i class="fab fa-whatsapp mr-2"></i> Contáctame por WhatsApp
+        </a>
       </div>
     </div>
 
-    <div class="mt-10 text-center text-sm text-gray-500">
-      &copy; 2025 Kenny Conejeros Álvarez. Todos los derechos reservados.
-    </div>
+    <div class="mt-10 text-sm text-center text-gray-500">&copy; 2025 Kenny Conejeros Álvarez. Todos los derechos
+      reservados.</div>
   </footer>
-
-  <a href="https://wa.me/56979461343" target="_blank" class="whatsapp-float" aria-label="Contáctame por WhatsApp">
-    <i class="fab fa-whatsapp"></i>
-  </a>
-
-
 
   <!-- SCRIPT -->
   <script>
