Descripción del cambio

--- a/index.html
+++ b/index.html
@@ -212,72 +212,72 @@
 
     </div>
 
-   <!-- Bloque con 4 columnas mejorado con nuevos íconos -->
-<div class="max-w-6xl mx-auto mt-20 grid grid-cols-1 md:grid-cols-4 gap-8 px-6">
-  <!-- Tarjeta 1: Integradora -->
-  <div class="bg-white rounded-2xl shadow-sm p-8 text-center hover:shadow-md transition-shadow">
-    <div class="mx-auto w-16 h-16 flex items-center justify-center mb-6">
-      <!-- Corazón -->
-      <svg class="w-12 h-12 text-[#D36B8B]" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-        <path stroke-linecap="round" stroke-linejoin="round"
-          d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
-      </svg>
+    <!-- Bloque con 4 columnas mejorado con nuevos íconos -->
+    <div class="max-w-6xl mx-auto mt-20 grid grid-cols-1 md:grid-cols-4 gap-8 px-6">
+      <!-- Tarjeta 1: Integradora -->
+      <div class="bg-white rounded-2xl shadow-sm p-8 text-center hover:shadow-md transition-shadow">
+        <div class="mx-auto w-16 h-16 flex items-center justify-center mb-6">
+          <!-- Corazón -->
+          <svg class="w-12 h-12 text-[#D36B8B]" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+          </svg>
+        </div>
+        <h3 class="text-2xl font-semibold text-gray-800 mb-1">Integradora</h3>
+        <p class="text-sm text-gray-500 mb-4">(Terapia para bienestar integral)</p>
+        <a href="#" class="text-[#D36B8B] font-medium hover:underline">Más información</a>
+      </div>
+
+      <!-- Tarjeta 2: Sesiones -->
+      <div class="bg-white rounded-2xl shadow-sm p-8 text-center hover:shadow-md transition-shadow">
+        <div class="mx-auto w-16 h-16 flex items-center justify-center mb-6">
+          <!-- Calendario -->
+          <svg class="w-12 h-12 text-[#D36B8B]" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+            <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
+            <line x1="16" y1="2" x2="16" y2="6" />
+            <line x1="8" y1="2" x2="8" y2="6" />
+            <line x1="3" y1="10" x2="21" y2="10" />
+          </svg>
+        </div>
+        <h3 class="text-2xl font-semibold text-gray-800 mb-1">Sesiones</h3>
+        <p class="text-sm text-gray-500 mb-4">(Agendamiento y seguimiento personalizado)</p>
+        <a href="#" class="text-[#D36B8B] font-medium hover:underline">Más información</a>
+      </div>
+
+      <!-- Tarjeta 3: Terapia online -->
+      <div class="bg-white rounded-2xl shadow-sm p-8 text-center hover:shadow-md transition-shadow">
+        <div class="mx-auto w-16 h-16 flex items-center justify-center mb-6">
+          <svg class="w-12 h-12 text-[#D36B8B]" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+            <!-- Pantalla -->
+            <rect x="2" y="5" width="20" height="14" rx="2" ry="2" />
+            <!-- Cabeza -->
+            <circle cx="12" cy="10" r="3" />
+            <!-- Cuerpo (tronco simple) -->
+            <path stroke-linecap="round" stroke-linejoin="round" d="M9 17c0-1.5 6-1.5 6 0v2H9v-2z" />
+          </svg>
+        </div>
+        <h3 class="text-2xl font-semibold text-gray-800 mb-1">Terapia online</h3>
+        <p class="text-sm text-gray-500 mb-4">(Atención remota desde cualquier lugar para adolecentes)</p>
+        <a href="#" class="text-[#D36B8B] font-medium hover:underline">Más información</a>
+      </div>
+
+      <!-- Tarjeta 4: Terapia presencial (icono globo de conversación) -->
+      <div class="bg-white rounded-2xl shadow-sm p-8 text-center hover:shadow-md transition-shadow">
+        <div class="mx-auto w-16 h-16 flex items-center justify-center mb-6">
+          <!-- Globo de conversación -->
+          <svg class="w-12 h-12 text-[#D36B8B]" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M7 8h10M7 12h6m-6 8l-4-4H3a2 2 0 01-2-2V6a2 2 0 012-2h18a2 2 0 012 2v8a2 2 0 01-2 2H9l-2 2z" />
+          </svg>
+        </div>
+        <h3 class="text-2xl font-semibold text-gray-800 mb-1">Terapia presencial</h3>
+        <p class="text-sm text-gray-500 mb-3">(para niñas, niños y adolescentes)</p>
+        <a href="#" class="text-[#D36B8B] font-medium hover:underline">Más información</a>
+      </div>
+
+
+
     </div>
-    <h3 class="text-2xl font-semibold text-gray-800 mb-1">Integradora</h3>
-    <p class="text-sm text-gray-500 mb-4">(Terapia para bienestar integral)</p>
-    <a href="#" class="text-[#D36B8B] font-medium hover:underline">Más información</a>
-  </div>
-
-  <!-- Tarjeta 2: Sesiones -->
-  <div class="bg-white rounded-2xl shadow-sm p-8 text-center hover:shadow-md transition-shadow">
-    <div class="mx-auto w-16 h-16 flex items-center justify-center mb-6">
-      <!-- Calendario -->
-      <svg class="w-12 h-12 text-[#D36B8B]" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-        <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
-        <line x1="16" y1="2" x2="16" y2="6" />
-        <line x1="8" y1="2" x2="8" y2="6" />
-        <line x1="3" y1="10" x2="21" y2="10" />
-      </svg>
-    </div>
-    <h3 class="text-2xl font-semibold text-gray-800 mb-1">Sesiones</h3>
-    <p class="text-sm text-gray-500 mb-4">(Agendamiento y seguimiento personalizado)</p>
-    <a href="#" class="text-[#D36B8B] font-medium hover:underline">Más información</a>
-  </div>
-
-  <!-- Tarjeta 3: Terapia online -->
-  <div class="bg-white rounded-2xl shadow-sm p-8 text-center hover:shadow-md transition-shadow">
-    <div class="mx-auto w-16 h-16 flex items-center justify-center mb-6">
-      <svg class="w-12 h-12 text-[#D36B8B]" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-        <!-- Pantalla -->
-        <rect x="2" y="5" width="20" height="14" rx="2" ry="2" />
-        <!-- Cabeza -->
-        <circle cx="12" cy="10" r="3" />
-        <!-- Cuerpo (tronco simple) -->
-        <path stroke-linecap="round" stroke-linejoin="round" d="M9 17c0-1.5 6-1.5 6 0v2H9v-2z" />
-      </svg>
-    </div>
-    <h3 class="text-2xl font-semibold text-gray-800 mb-1">Terapia online</h3>
-    <p class="text-sm text-gray-500 mb-4">(Atención remota desde cualquier lugar para adolecentes)</p>
-    <a href="#" class="text-[#D36B8B] font-medium hover:underline">Más información</a>
-  </div>
-
- <!-- Tarjeta 4: Terapia presencial (icono globo de conversación) -->
-<div class="bg-white rounded-2xl shadow-sm p-8 text-center hover:shadow-md transition-shadow">
-  <div class="mx-auto w-16 h-16 flex items-center justify-center mb-6">
-    <!-- Globo de conversación -->
-    <svg class="w-12 h-12 text-[#D36B8B]" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-      <path stroke-linecap="round" stroke-linejoin="round"
-        d="M7 8h10M7 12h6m-6 8l-4-4H3a2 2 0 01-2-2V6a2 2 0 012-2h18a2 2 0 012 2v8a2 2 0 01-2 2H9l-2 2z" />
-    </svg>
-  </div>
-  <h3 class="text-2xl font-semibold text-gray-800 mb-1">Terapia presencial</h3>
-  <p class="text-sm text-gray-500 mb-3">(para niñas, niños y adolescentes)</p>
-  <a href="#" class="text-[#D36B8B] font-medium hover:underline">Más información</a>
-</div>
-
-
-
-</div>
 
 
 
@@ -547,7 +547,7 @@
             <div class="absolute left-[-36px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
             </div>
             <div class="ml-4">
-              <h4 class="text-xl font-semibold text-[#3f4143]">Diploma en Inclusión y Diversidad </h4>
+              <h4 class="text-xl font-semibold text-[#3f4143]">Diplomado en Inclusión y Diversidad </h4>
               <p class="text-gray-600">2016 - 2018 Agregar años o quitar este campo</p>
               <p class="text-gray-500">Profuturo.</p>
             </div>
@@ -563,7 +563,7 @@
             </div>
             <div class="ml-4">
               <h4 class="text-xl font-semibold text-[#3f4143]">WISC-V: Escala Wechsler de Inteligencia para Niños</h4>
-              <p class="text-gray-600">2016 - 2018 Agregar años o quitar este campo</p>
+
               <p class="text-gray-500">Formación en aplicación, corrección e interpretación de la prueba WISC-V para
                 evaluar el coeficiente intelectual en niños y niñas..</p>
             </div>
@@ -574,7 +574,7 @@
             <div class="ml-4">
               <h4 class="text-xl font-semibold text-[#3f4143]">Primeros Auxilios Psicológicos y Apoyo Psicosocial ante
                 Catástrofes</h4>
-              <p class="text-gray-600">2016 - 2018 Agregar años o quitar este campo</p>
+
               <p class="text-gray-500">Entrenamiento para brindar contención emocional y asistencia básica en contextos
                 de emergencia y crisis.</p>
             </div>
@@ -585,7 +585,7 @@
             <div class="ml-4">
               <h4 class="text-xl font-semibold text-[#3f4143]">Complejidades y Desafíos Actuales en Infancia, Niñez y
                 Adolescencia</h4>
-              <p class="text-gray-600">2016 - 2018 Agregar años o quitar este campo</p>
+
               <p class="text-gray-500">Análisis de problemáticas contemporáneas que afectan el desarrollo psicosocial y
                 emocional de niños, niñas y adolescentes.</p>
             </div>
@@ -595,7 +595,7 @@
             </div>
             <div class="ml-4">
               <h4 class="text-xl font-semibold text-[#3f4143]">Evaluación e Intervención en Psicopatología Infantil</h4>
-              <p class="text-gray-600">2016 - 2018 Agregar años o quitar este campo</p>
+
               <p class="text-gray-500">Herramientas clínicas para la identificación y abordaje de trastornos
                 psicológicos en población infantil.</p>
             </div>
@@ -606,7 +606,7 @@
             <div class="ml-4">
               <h4 class="text-xl font-semibold text-[#3f4143]">Intervenciones Experienciales en Terapia de Aceptación y
                 Compromiso (ACT)</h4>
-              <p class="text-gray-600">2016 - 2018 Agregar años o quitar este campo</p>
+
               <p class="text-gray-500"> Aplicación práctica de estrategias centradas en valores, aceptación y
                 mindfulness en el trabajo terapéutico.</p>
             </div>
@@ -616,11 +616,35 @@
             </div>
             <div class="ml-4">
               <h4 class="text-xl font-semibold text-[#3f4143]">Introducción a la Lengua de Señas</h4>
-              <p class="text-gray-600">2016 - 2018 Agregar años o quitar este campo</p>
+
               <p class="text-gray-500"> Curso básico para el aprendizaje de lengua de señas, facilitando la comunicación
                 inclusiva con personas sordas.</p>
             </div>
           </div>
+
+          <div class="relative">
+            <div class="absolute left-[-36px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
+            </div>
+            <div class="ml-4">
+              <h4 class="text-xl font-semibold text-[#3f4143]">Introducción a la Lengua de Señas</h4>
+
+              <p class="text-gray-500"> Curso básico para el aprendizaje de lengua de señas, facilitando la comunicación
+                inclusiva con personas sordas.</p>
+            </div>
+          </div>
+
+          <div class="relative">
+            <div class="absolute left-[-36px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
+            </div>
+            <div class="ml-4">
+              <h4 class="text-xl font-semibold text-[#3f4143]">Transgresión de Límites – Teletón</h4>
+              <p class="text-gray-500">
+                Curso orientado a comprender y prevenir situaciones de vulneración de derechos en contextos de atención
+                a personas con discapacidad.
+              </p>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
@@ -642,14 +666,6 @@
           <p class="text-sm text-gray-600 mb-1">2020</p>
           <p class="text-gray-500">Estudio exploratorio sobre el incremento de síntomas ansiosos y depresivos en mujeres
             durante el confinamiento por COVID-19.</p>
-        </div>
-
-        <!-- Tarjeta de investigación -->
-        <div class="bg-[#f4f4f4] p-6 rounded-lg shadow-sm transition transform hover:-translate-y-1 duration-300">
-          <h3 class="text-xl font-bold text-[#AB4F6B]">Violencia simbólica y salud mental</h3>
-          <p class="text-sm text-gray-600 mb-1">2018</p>
-          <p class="text-gray-500">Análisis del impacto del discurso mediático en la construcción de la autoestima en
-            adolescentes mujeres.</p>
         </div>
 
         <!-- Tarjeta con enlaces reales -->
@@ -710,7 +726,8 @@
           <a href="#" target="_blank" class="text-[#AB4F6B] hover:text-[#82384f] text-3xl">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="https://www.instagram.com/psicokenny.educa/" target="_blank" class="text-[#AB4F6B] hover:text-[#82384f] text-3xl">
+          <a href="https://www.instagram.com/psicokenny.educa/" target="_blank"
+            class="text-[#AB4F6B] hover:text-[#82384f] text-3xl">
             <i class="fab fa-instagram"></i>
           </a>
           <a href="#" target="_blank" class="text-[#AB4F6B] hover:text-[#82384f] text-3xl">
